cleaned both grammars