@@ -6,267 +6,286 @@ import org.antlr.v4.runtime.CommonTokenStream;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
+import org.antlr.v4.runtime.tree.ParseTree;
 import poulet.kernel.ast.*;
 import poulet.parser.kernel.*;
 
-public class KernelASTParser extends KernelBaseListener {
+public class KernelASTParser extends KernelBaseVisitor<Node> {
     public static Program parse(CharStream stream) {
         KernelLexer lexer = new KernelLexer(stream);
         KernelParser parser = new KernelParser(new CommonTokenStream(lexer));
-        return (Program) TreeReduce.reduce(parser.program(), KernelASTParser::reducer);
+        return new KernelASTParser().visitProgram(parser.program());
     }
 
-    private static Node reducer(Object payload, List<Node> children) {
-        if (payload instanceof KernelParser.ProgramContext) {
-            List<TopLevel> topLevels = new ArrayList<>();
+    @Override
+    public Program visitProgram(KernelParser.ProgramContext ctx) {
+        List<TopLevel> nodes = new ArrayList<>();
+        for(ParseTree node : ctx.children) {
+            nodes.add(this.visitTopLevel(node));
+        }
+        return new Program(nodes);
+    }
 
-            for (Node child : children) {
-                if (child == null) // sketchy but easiest way to ignore EOF
-                    continue;
+    public TopLevel visitTopLevel(ParseTree ctx) {
+        return (TopLevel) this.visit(ctx);
+    }
 
-                if (child instanceof TypeDeclaration) {
-                    InductiveDeclaration inductiveDeclaration = new InductiveDeclaration(
-                            Arrays.asList((TypeDeclaration) child)
-                    );
-                    topLevels.add(inductiveDeclaration);
-                } else {
-                    topLevels.add((TopLevel) child);
-                }
-            }
+    @Override
+    public Definition visitDefinition(KernelParser.DefinitionContext ctx) {
+        if(ctx.def == null)
+            return new Definition(this.visitSymbol(ctx.name), this.visitExpression(ctx.type));
+        else
+            return new Definition(this.visitSymbol(ctx.name), this.visitExpression(ctx.type), this.visitExpression(ctx.def));
+    }
 
-            return new Program(topLevels);
-        } else if (payload instanceof KernelParser.DefinitionContext) {
-            Symbol name = (Symbol) children.get(0);
-            Expression type = (Expression) children.get(2);
+    @Override
+    public Definition visitToplevel_fix(KernelParser.Toplevel_fixContext ctx) {
+        Definition definition = this.visitDefinition(ctx.def);
 
-            switch (children.size()) {
-                case 3:
-                    return new Definition(name, type);
-                case 5:
-                    Expression definition = (Expression) children.get(4);
-                    return new Definition(name, type, definition);
-            }
-        } else if (payload instanceof KernelParser.CommandContext) {
-            KernelParser.CommandContext context = (KernelParser.CommandContext) payload;
+        Fix.Clause clause = new Fix.Clause(
+                definition.name,
+                definition.type,
+                definition.definition
+        );
 
-            if (context.REDUCE() != null) {
-                return new Command(
-                        Command.Action.REDUCE,
-                        List.of((Expression) children.get(1))
-                );
-            } else if (context.DEDUCE() != null) {
-                return new Command(
-                        Command.Action.DEDUCE,
-                        List.of((Expression) children.get(1))
-                );
-            } else if (context.ASSERT() != null) {
-                return new Command(
-                        Command.Action.ASSERT,
-                        List.of((Expression) children.get(1), (Expression) children.get(3))
-                );
-            }
+        Fix fix = new Fix(
+                Arrays.asList(clause),
+                definition.name
+        );
+        return new Definition(
+                definition.name,
+                definition.type,
+                fix
+        );
+    }
 
-            return null;
-        } else if (payload instanceof KernelParser.Type_declarationContext) {
-            Symbol name = (Symbol) children.get(1);
-            List<TypeDeclaration.Parameter> parameters = new ArrayList<>();
-            List<TypeDeclaration.Constructor> constructors = new ArrayList<>();
+    @Override
+    public Command visitCommand(KernelParser.CommandContext ctx) {
+        List<Expression> arguments = ctx.args.stream().map(this::visitExpression).collect(Collectors.toList());
 
-            int i = 2;
-            for (; children.get(i) instanceof TypeDeclaration.Parameter; i++)
-                parameters.add((TypeDeclaration.Parameter) children.get(i));
+        if (ctx.REDUCE() != null) {
+            return new Command(
+                    Command.Action.REDUCE,
+                    arguments
+            );
+        } else if (ctx.DEDUCE() != null) {
+            return new Command(
+                    Command.Action.DEDUCE,
+                    arguments
+            );
+        } else if (ctx.ASSERT() != null) {
+            return new Command(
+                    Command.Action.ASSERT,
+                    arguments
+            );
+        }
 
-            i++;
+        return null;
+    }
 
-            Expression type = (Expression) children.get(i);
-
-            i += 2;
-
-            for (; children.get(i) instanceof TypeDeclaration.Constructor; i++)
-                constructors.add((TypeDeclaration.Constructor) children.get(i));
-
-            TypeDeclaration typeDeclaration = new TypeDeclaration(null, name, parameters, type, constructors);
-            return typeDeclaration;
-        } else if (payload instanceof KernelParser.ExpressionContext) {
-            KernelParser.ExpressionContext context = (KernelParser.ExpressionContext) payload;
-            if (children.size() > 1) {
-                if (context.children.size() > 2 && context.children.get(1).getText().equals("->")) {
-                    Expression type = (Expression) children.get(0);
-                    Expression body = (Expression) children.get(2);
-                    return new Prod(
-                            new Symbol("_"),
-                            type,
-                            body
-                    );
-                } else if (children.get(0) instanceof Expression) {
-                    Expression function = (Expression) children.get(0);
-                    List<Expression> arguments = new ArrayList<>();
-
-                    for (int i = 2; i < children.size() - 1; i += 2) {
-                        arguments.add((Expression) children.get(i));
-                    }
-
-                    Application application = new Application(
-                            function,
-                            arguments.get(0)
-                    );
-
-                    for (int i = 1; i < arguments.size(); i++) {
-                        application = new Application(
-                                application,
-                                arguments.get(i)
-                        );
-                    }
-
-                    return application;
-                } else {
-                    return children.get(1);
-                }
-            } else {
-                return children.get(0);
-            }
-        } else if (payload instanceof KernelParser.VariableContext) {
-            Symbol name = (Symbol) children.get(0);
-            return new Var(name);
-        } else if (payload instanceof KernelParser.AbstractionContext) {
-            KernelParser.AbstractionContext context = (KernelParser.AbstractionContext) payload;
-            Symbol variable = (Symbol) children.get(1);
-            Expression type = (Expression) children.get(3);
-            Expression body = (Expression) children.get(5);
-            return new Abstraction(variable, type, body);
-        } else if (payload instanceof KernelParser.Pi_typeContext) {
-            KernelParser.Pi_typeContext context = (KernelParser.Pi_typeContext) payload;
-            Symbol variable = (Symbol) children.get(1);
-            Expression type = (Expression) children.get(3);
-            Expression body = (Expression) children.get(5);
-            return new Prod(variable, type, body);
-        } else if (payload instanceof KernelParser.ConstructorContext) {
-            Symbol name = (Symbol) children.get(0);
-            Expression definition = (Expression) children.get(2);
-            return new TypeDeclaration.Constructor(name, definition);
-        } else if (payload instanceof KernelParser.SymbolContext) {
-            KernelParser.SymbolContext context = (KernelParser.SymbolContext) payload;
-            String symbol = context.SYMBOL().getText();
-            return new Symbol(symbol);
-        } else if (payload instanceof KernelParser.Inductive_typesContext) {
-            List<TypeDeclaration> typeDeclarations = new ArrayList<>();
-            for (int i = 2; i < children.size() - 1; i++) {
-                typeDeclarations.add((TypeDeclaration) children.get(i));
-            }
-
-            InductiveDeclaration inductiveDeclaration = new InductiveDeclaration(typeDeclarations);
-            for (TypeDeclaration typeDeclaration : inductiveDeclaration.typeDeclarations) {
-                typeDeclaration.inductiveDeclaration = inductiveDeclaration;
-            }
-            return inductiveDeclaration;
-        } else if (payload instanceof KernelParser.Toplevel_type_declarationContext) {
-            TypeDeclaration typeDeclaration = (TypeDeclaration) children.get(0);
-            InductiveDeclaration inductiveDeclaration = new InductiveDeclaration(Arrays.asList(typeDeclaration));
+    @Override
+    public InductiveDeclaration visitInductive_types(KernelParser.Inductive_typesContext ctx) {
+        List<TypeDeclaration> declarations = ctx.declarations.stream().map(this::visitType_declaration).collect(Collectors.toList());
+        InductiveDeclaration inductiveDeclaration = new InductiveDeclaration(declarations);
+        for (TypeDeclaration typeDeclaration : inductiveDeclaration.typeDeclarations) {
             typeDeclaration.inductiveDeclaration = inductiveDeclaration;
-            return inductiveDeclaration;
-        } else if (payload instanceof KernelParser.ParameterContext) {
-            Symbol symbol = (Symbol) children.get(1);
-            Expression type = (Expression) children.get(3);
-            return new TypeDeclaration.Parameter(symbol, type);
-        } else if (payload instanceof KernelParser.Inductive_typeContext) {
-            Symbol type = (Symbol) children.get(0);
-            List<Expression> parameters = new ArrayList<>();
-            for (int i = 1; i + 1 < children.size() && children.get(i + 1) instanceof Expression; i += 2) {
-                parameters.add((Expression) children.get(i + 1));
-            }
-            return new InductiveType(type, parameters, new ArrayList<>());
-        } else if (payload instanceof KernelParser.Constructor_callContext) {
-            InductiveType inductiveType = (InductiveType) children.get(0);
-            Symbol constructor = (Symbol) children.get(2);
-            return new ConstructorCall(inductiveType.inductiveType, inductiveType.parameters, constructor, new ArrayList<>());
-        } else if (payload instanceof KernelParser.MatchContext) {
-            Expression expression = (Expression) children.get(1);
-            Symbol expressionSymbol = (Symbol) children.get(3);
-            List<Symbol> argumentSymbols = new ArrayList<>();
+        }
+        return inductiveDeclaration;
+    }
 
-            int i = 5;
+    @Override
+    public InductiveDeclaration visitToplevel_type_declaration(KernelParser.Toplevel_type_declarationContext ctx) {
+        TypeDeclaration typeDeclaration = this.visitType_declaration(ctx.declaration);
+        InductiveDeclaration inductiveDeclaration = new InductiveDeclaration(Arrays.asList(typeDeclaration));
+        typeDeclaration.inductiveDeclaration = inductiveDeclaration;
+        return inductiveDeclaration;
+    }
 
-            for (; children.get(i) instanceof Symbol; i += 2) {
-                argumentSymbols.add((Symbol) children.get(i));
-            }
+    @Override
+    public TypeDeclaration visitType_declaration(KernelParser.Type_declarationContext ctx) {
+        Symbol name = this.visitSymbol(ctx.name);
+        List<TypeDeclaration.Parameter> parameters = ctx.parameters.stream().map(this::visitParameter).collect(Collectors.toList());
+        List<TypeDeclaration.Constructor> constructors = ctx.constructors.stream().map(this::visitConstructor).collect(Collectors.toList());
+        Expression type = this.visitExpression(ctx.type);
+        TypeDeclaration typeDeclaration = new TypeDeclaration(null, name, parameters, type, constructors);
+        return typeDeclaration;
+    }
 
-            i += i == 5 ? 2 : 1;
-            Expression type = (Expression) children.get(i);
-            i += 2;
+    public Expression visitExpression(KernelParser.ExpressionContext ctx) {
+        return (Expression) this.visit(ctx);
+    }
 
-            List<Match.Clause> clauses = new ArrayList<>();
+    @Override
+    public TypeDeclaration.Parameter visitParameter(KernelParser.ParameterContext ctx) {
+        Symbol symbol = this.visitSymbol(ctx.name);
+        Expression type = this.visitExpression(ctx.type);
+        return new TypeDeclaration.Parameter(symbol, type);
+    }
 
-            for (; i < children.size() - 1 && children.get(i) instanceof Match.Clause; i += 2) {
-                clauses.add((Match.Clause) children.get(i));
-            }
+    @Override
+    public Prod visitExpPiType(KernelParser.ExpPiTypeContext ctx) {
+        return this.visitPi_type(ctx.pi_type());
+    }
 
-            return new Match(expression, expressionSymbol, argumentSymbols, type, clauses);
-        } else if (payload instanceof KernelParser.Match_clauseContext) {
-            Symbol expressionSymbol = (Symbol) children.get(0);
-            List<Symbol> argumentSymbols = new ArrayList<>();
+    @Override
+    public Prod visitPi_type(KernelParser.Pi_typeContext ctx) {
+        return new Prod(this.visitSymbol(ctx.name), this.visitExpression(ctx.type), this.visitExpression(ctx.body));
+    }
 
-            for (int i = 1; i < children.size() - 3 && children.get(i + 1) instanceof Symbol; i += 2) {
-                argumentSymbols.add((Symbol) children.get(i + 1));
-            }
+    @Override
+    public Prod visitFunction(KernelParser.FunctionContext ctx) {
+        return new Prod(new Symbol("_"), this.visitExpression(ctx.domain), this.visitExpression(ctx.codomain));
+    }
 
-            Expression expression = (Expression) children.get(children.size() - 1);
+    @Override
+    public InductiveType visitInductiveType(KernelParser.InductiveTypeContext ctx) {
+        return this.visitInductive_type(ctx.inductive_type());
+    }
 
-            return new Match.Clause(expressionSymbol, argumentSymbols, expression);
-        } else if (payload instanceof KernelParser.Fix_definitionContext) {
-            Symbol name = (Symbol) children.get(0);
-            Expression type = (Expression) children.get(2);
-            Expression definition = (Expression) children.get(4);
-            return new Definition(name, type, definition);
-        } else if (payload instanceof KernelParser.FixContext) {
-            List<Fix.Clause> clauses = new ArrayList<>();
-            for (int i = 2; i < children.size() - 3; i++) {
-                Definition definition = (Definition) children.get(i);
-                clauses.add(new Fix.Clause(
-                        definition.name,
-                        definition.type,
-                        definition.definition
-                ));
-            }
-            Symbol symbol = (Symbol) children.get(children.size() - 1);
-            return new Fix(clauses, symbol);
-        } else if (payload instanceof KernelParser.Toplevel_fixContext) {
-            Definition definition = (Definition) children.get(1);
+    @Override
+    public ConstructorCall visitConstructorCall(KernelParser.ConstructorCallContext ctx) {
+        return this.visitConstructor_call(ctx.constructor_call());
+    }
 
-            if (definition.definition == null) {
-                System.err.println("top level fix can't have null definition");
-                return null;
-            }
+    @Override
+    public Application visitApplication(KernelParser.ApplicationContext ctx) {
+        Expression function = this.visitExpression(ctx.function);
+        List<Expression> arguments = ctx.args.stream().map(this::visitExpression).collect(Collectors.toList());
+        Application application = new Application(
+                function,
+                arguments.get(0)
+        );
 
-            Fix.Clause clause = new Fix.Clause(
+        for (int i = 1; i < arguments.size(); i++) {
+            application = new Application(
+                    application,
+                    arguments.get(i)
+            );
+        }
+
+        return application;
+    }
+
+    @Override
+    public Expression visitParentheses(KernelParser.ParenthesesContext ctx) {
+        return this.visitExpression(ctx.body);
+    }
+
+    @Override
+    public Sort visitSort(KernelParser.SortContext ctx) {
+        String text = ctx.children.get(0).getText();
+
+        if (text.equals("Prop")) {
+            return new Prop();
+        } else if (text.equals("Set")) {
+            return new Set();
+        } else if (text.matches("Type\\d+")) {
+            int level = Integer.parseInt(text.substring(4));
+            return new Type(level);
+        }
+
+        return null;
+    }
+
+    @Override
+    public ConstructorCall visitConstructor_call(KernelParser.Constructor_callContext ctx) {
+        InductiveType inductiveType = this.visitInductive_type(ctx.type);
+        Symbol constructor = this.visitSymbol(ctx.constructorName);
+        return new ConstructorCall(inductiveType.inductiveType, inductiveType.parameters, constructor, new ArrayList<>());
+    }
+
+    @Override
+    public InductiveType visitInductive_type(KernelParser.Inductive_typeContext ctx) {
+        Symbol type = this.visitSymbol(ctx.typeName);
+        List<Expression> parameters = ctx.parameters.stream().map(this::visitExpression).collect(Collectors.toList());
+        return new InductiveType(type, parameters, new ArrayList<>());
+    }
+
+    @Override
+    public Var visitVariable(KernelParser.VariableContext ctx) {
+        return new Var(this.visitSymbol(ctx.name));
+    }
+
+    @Override
+    public Fix visitExpFix(KernelParser.ExpFixContext ctx) {
+        return this.visitFix(ctx.fix());
+    }
+
+    @Override
+    public Var visitExpVariable(KernelParser.ExpVariableContext ctx) {
+        return this.visitVariable(ctx.variable());
+    }
+
+    @Override
+    public Abstraction visitExpAbstraction(KernelParser.ExpAbstractionContext ctx) {
+        return this.visitAbstraction(ctx.abstraction());
+    }
+
+    @Override
+    public Sort visitExpSort(KernelParser.ExpSortContext ctx) {
+        return this.visitSort(ctx.sort());
+    }
+
+    @Override
+    public Match visitExpMatch(KernelParser.ExpMatchContext ctx) {
+        return this.visitMatch(ctx.match());
+    }
+
+    @Override
+    public Abstraction visitAbstraction(KernelParser.AbstractionContext ctx) {
+        return new Abstraction(this.visitSymbol(ctx.name), this.visitExpression(ctx.type), this.visitExpression(ctx.body));
+    }
+
+    @Override
+    public TypeDeclaration.Constructor visitConstructor(KernelParser.ConstructorContext ctx) {
+        Symbol name = this.visitSymbol(ctx.name);
+        Expression definition = this.visitExpression(ctx.type);
+        return new TypeDeclaration.Constructor(name, definition);
+    }
+
+    @Override
+    public Match visitMatch(KernelParser.MatchContext ctx) {
+        Expression expression = this.visitExpression(ctx.exp);
+        Symbol expressionSymbol = this.visitSymbol(ctx.name);
+        List<Symbol> argumentSymbols = ctx.argNames.stream().map(this::visitSymbol).collect(Collectors.toList());
+        Expression type = this.visitExpression(ctx.type);
+        List<Match.Clause> clauses = ctx.clauses.stream().map(this::visitMatch_clause).collect(Collectors.toList());
+
+        return new Match(expression, expressionSymbol, argumentSymbols, type, clauses);
+    }
+
+    @Override
+    public Match.Clause visitMatch_clause(KernelParser.Match_clauseContext ctx) {
+        Symbol expressionSymbol = this.visitSymbol(ctx.constructorName);
+        List<Symbol> argumentSymbols = ctx.argNames.stream().map(this::visitSymbol).collect(Collectors.toList());
+        Expression expression = this.visitExpression(ctx.exp);
+
+        return new Match.Clause(expressionSymbol, argumentSymbols, expression);
+    }
+
+    @Override
+    public Fix visitFix(KernelParser.FixContext ctx) {
+        List<Fix.Clause> clauses = ctx.definitions.stream().map(def -> {
+            Definition definition = this.visitFix_definition(def);
+            return new Fix.Clause(
                     definition.name,
                     definition.type,
                     definition.definition
             );
+        }).collect(Collectors.toList());
+        Symbol symbol = this.visitSymbol(ctx.export);
+        return new Fix(clauses, symbol);
+    }
 
-            Fix fix = new Fix(
-                    Arrays.asList(clause),
-                    definition.name
-            );
-            return new Definition(
-                    definition.name,
-                    definition.type,
-                    fix
-            );
-        } else if (payload instanceof KernelParser.SortContext) {
-            KernelParser.SortContext context = (KernelParser.SortContext) payload;
-            String text = context.children.get(0).getText();
+    @Override
+    public Definition visitFix_definition(KernelParser.Fix_definitionContext ctx) {
+        return new Definition(this.visitSymbol(ctx.name), this.visitExpression(ctx.type), this.visitExpression(ctx.def));
+    }
 
-            if (text.equals("Prop")) {
-                return new Prop();
-            } else if (text.equals("Set")) {
-                return new Set();
-            } else if (text.matches("Type\\d+")) {
-                int level = Integer.parseInt(text.substring(4));
-                return new Type(level);
-            }
-        }
-
-        return null;
+    @Override
+    public Symbol visitSymbol(KernelParser.SymbolContext ctx) {
+        return new Symbol(ctx.getText());
     }
 }
